--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "reason-music-player",
   "version": "0.1.0",
   "scripts": {
-    "start": "concurrently -k \"yarn run start:bsb\" \"yarn run start:webpack\"",
+    "start": "concurrently -k \"npm run start:bsb\" \"npm run start:webpack\"",
     "start:bsb": "bsb -clean-world -make-world -w",
     "start:webpack": "webpack-dev-server --port 3000",
-    "build": "concurrently -k \"yarn run build:webpack\"",
+    "build": "concurrently -k \"npm run build:webpack\"",
     "build:webpack": "NODE_ENV=production webpack",
     "format": "refmt src/*.re"
   },
@@ -20,8 +20,8 @@
     "reason-react": ">=0.7.0"
   },
   "devDependencies": {
-    "bs-platform": "^5.0.6",
     "concurrently": "^5.0.0",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
