📦 NEW: added bs-platform explicit dependency, updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .merlin
 .bsb.lock
 npm-debug.log
+pnpm-debug.log
 /lib/bs/
 /node_modules/
 /src/node_modules
@@ -9,4 +10,4 @@ npm-debug.log
 .firebase/
 .firebaserc
 firebase.json
-tags
+tags*
