--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reason-react": ">=0.7.0"
   },
   "devDependencies": {
+    "bs-platform": "5.1.0",
     "concurrently": "^5.0.0",
     "file-loader": "^4.2.0",
     "gh-pages": "^2.1.1",
