--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
   "author": "Sophia Brandt",
   "license": "MIT",
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "reason-react": ">=0.7.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "reason-react": ">=0.9.1"
   },
   "devDependencies": {
-    "bs-platform": "5.2.1",
-    "concurrently": "^5.0.0",
-    "file-loader": "^4.2.0",
-    "gh-pages": "^2.1.1",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.9.0"
+    "bs-platform": "^8.0.3",
+    "concurrently": "^5.2.0",
+    "file-loader": "^6.0.0",
+    "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^4.3.0",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
